--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -6,14 +6,26 @@ body {
   background-color: #000;
 }
 
+h1.header {
+  padding-top: 0.5em !important;
+  cursor: pointer;
+}
+
+h2.header {
+  text-transform: uppercase !important;
+}
+
 .container {
   max-width: 1280px;
   margin: auto;
 }
 
 .syllable {
-  padding: 0 4em;
+  padding: 0 1.8em;
   margin: 0;
   cursor: pointer;
 }
 
+.done {
+  color: #5bbd72 !important;
+}
