--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -6,7 +6,7 @@
       {{#each sequences}}
         <div class="center aligned column {{sequence}}-column">
 
-          <h2 class="ui header {{sequence}}-header">{{sequence}}</h2>
+          <h2 class="ui header">{{sequence}}</h2>
           <div class="ui divider"></div>
 
           {{#each syllables}}
@@ -24,7 +24,8 @@
   </div>
 
   <div class="ui container center aligned">
+    <i class="massive red remove link icon"></i>
     <i class="massive blue random link icon"></i>
-    <i class="massive generate red remove icon"></i>
+    <i class="massive green disabled checkmark link icon"></i>
   </div>
 </template>
