a few changes made for syllabear

--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -1,7 +1,10 @@
 <template name="header">
 
   <div class="ui container">
-    <h1 class="ui header">Syllabear</h1>
+    <h1 class="ui green header">
+      <i class="small white paw icon"></i>
+      Syllabear
+    </h1>
   </div>
 
   <div class="ui divider"></div>
