--- a/client/views/results/results.html
+++ b/client/views/results/results.html
@@ -25,4 +25,8 @@
     </div>
   </div>
 
+  <div class="ui container center aligned">
+    <i class="massive blue left arrow link icon"></i>
+  </div>
+
 </template>
