--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -1,7 +1,3 @@
-* {
-  color: #fff !important;
-}
-
 body {
   background-color: #000;
 }
@@ -9,14 +5,20 @@ body {
 h1.header {
   padding-top: 0.5em !important;
   cursor: pointer;
+  color: #fff !important;
 }
 
 h2.header {
+  color: #fff !important;
   text-transform: uppercase !important;
 }
 
+.text {
+  color: #fff !important;
+}
+
 .container {
-  max-width: 1280px;
+  max-width: 960px;
   margin: auto;
 }
 
