--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -22,6 +22,10 @@ h2.header {
   margin: auto;
 }
 
+.statistic {
+  margin: 0 !important;
+}
+
 .syllable {
   padding: 0 1.8em;
   margin: 0;
@@ -31,3 +35,8 @@ h2.header {
 .done {
   color: #5bbd72 !important;
 }
+
+.edit-column {
+  padding: 0.5em !important;
+}
+
