--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -9,12 +9,6 @@
           <h2 class="ui header">{{sequence}}</h2>
           <div class="ui divider"></div>
 
-          <div class="ui input">
-            <input class='syllable-input' placeholder='Add/Remove...'>
-          </div>
-
-          <br>
-
           {{#each syllables}}
             <div class="ui small statistic">
               <div class="text value syllable">
@@ -30,6 +24,7 @@
   </div>
 
   <div class="ui container center aligned">
+    <i class="massive yellow edit link icon"></i>
     <i class="massive red remove link icon"></i>
     <i class="massive blue random link icon"></i>
     <i class="massive green disabled checkmark link icon"></i>
