--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -1,20 +1,13 @@
-body {
-  background-color: #000;
+h1.header {
+  cursor: pointer;
 }
 
-h1.header {
-  padding-top: 0.5em !important;
-  cursor: pointer;
-  color: #fff !important;
+#main > .segment {
+  min-height: 100vh;
 }
 
 h2.header {
-  color: #fff !important;
   text-transform: uppercase !important;
-}
-
-.text {
-  color: #fff !important;
 }
 
 .container {
@@ -32,11 +25,10 @@ h2.header {
   cursor: pointer;
 }
 
-.done {
+.ui.inverted.green.statistic > .value {
   color: #5bbd72 !important;
 }
 
 .edit-column {
   padding: 0.5em !important;
 }
-
