--- a/client/views/edit/edit.html
+++ b/client/views/edit/edit.html
@@ -4,7 +4,7 @@
       {{#each sequences}}
         <div class="center aligned column {{sequence}}-column">
 
-          <h2 class="ui header">{{sequence}}</h2>
+          <h2 class="ui inverted header">{{sequence}}</h2>
 
           <div class="ui input">
             <input placeholder='Add...'>
@@ -23,7 +23,7 @@
 
                 {{else}}
 
-                  <div class="ui small statistic">
+                  <div class="ui small inverted statistic">
                     <div class="text value syllable">
                       {{string}}
                       <br>
@@ -43,7 +43,7 @@
   </div>
 
   <div class="ui container center aligned">
-    <i class="massive blue left arrow link icon"></i>
+    <i class="massive red left arrow link icon"></i>
   </div>
 
 </template>
