--- a/client/views/layouts/basic.html
+++ b/client/views/layouts/basic.html
@@ -1,13 +1,15 @@
 <template name="basicLayout">
     <div id="main">
-        <header>
-            {{> header}}
-        </header>
+        <div class="ui inverted segment">
+            <header>
+                {{> header}}
+            </header>
 
-            {{> yield}}
-            {{! Also a sidebar! }}
-        <footer>
-            {{> footer}}
-        </footer>
+                {{> yield}}
+                {{! Also a sidebar! }}
+            <footer>
+                {{> footer}}
+            </footer>
+        </div>
     </div>
 </template>
