--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -1,13 +1,14 @@
 <template name="header">
 
+<div class="ui header inverted segment">
   <div class="ui container">
     <h1 class="ui green header">
       <i class="small white paw icon"></i>
       Syllabear
     </h1>
   </div>
-
   <div class="ui divider"></div>
+</div>
 
 </template>
 
