--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -29,6 +29,11 @@ h2.header {
   color: #5bbd72 !important;
 }
 
-.edit-column {
+.adjust-column {
   padding: 0.5em !important;
+}
+
+
+.modal {
+  min-height: 40vh;
 }
