--- a/client/views/edit/edit.html
+++ b/client/views/edit/edit.html
@@ -1,6 +1,8 @@
 <template name='edit'>
+
   <div class="ui container">
     <div class="ui grid three columns">
+
       {{#each sequences}}
         <div class="center aligned column {{sequence}}-column">
 
@@ -14,7 +16,8 @@
 
           <div class="ui grid two columns">
             {{#each syllables}}
-              <div class="center aligned column edit-column">
+              <div class="center aligned column adjust-column">
+
                 {{#if editing}}
 
                   <div class="ui input">
@@ -33,6 +36,7 @@
                   </div>
 
                 {{/if}}
+
               </div>
             {{/each}}
           </div>
