--- a/client/views/results/results.html
+++ b/client/views/results/results.html
@@ -1,12 +1,13 @@
 <template name='results'>
 
   <div class="ui container">
-    <div class="ui two column grid">
+    <div class="ui grid two column">
 
       {{#each lists}}
         <div class="center aligned column">
 
           <h2 class="ui inverted header">{{combo}}</h2>
+
           <div class="ui divider"></div>
 
           {{#each list}}
@@ -27,9 +28,8 @@
 
   <div class="ui container center aligned">
     <i class="massive red left arrow link icon"></i>
-    <i class="massive yellow folder open link icon"></i>
     <i class="massive blue shuffle link icon"></i>
-    <i class="massive green save link icon"></i>
+    <i class="massive green folder open link icon"></i>
   </div>
 
   <div class="ui basic modal">
@@ -38,19 +38,3 @@
 
 </template>
 
-<template name='modal'>
-  <i class="close icon"></i>
-  <div class="header">
-    Open List
-  </div>
-  <div class="content">
-    <div class="ui inverted icon input">
-      <input class='save-list' placeholder='Save As...'>
-      <i class="save icon"></i>
-    </div>
-
-    {{#each savedLists}}
-      <h3 class="ui yellow header" style='cursor: pointer'>{{name}}</h3>
-    {{/each}}
-  </div>
-</template>
