--- a/client/views/modal/modal.html
+++ b/client/views/modal/modal.html
@@ -5,9 +5,7 @@
 
       <div class="column">
 
-  <h2 class="ui inverted header">
-    Open List
-  </h2>
+        <h2 class="ui inverted header">Open</h2>
 
         <div class="ui inverted icon input">
           <input class='save-list' placeholder='Save As...'>
