re did a few things

--- a/client/views/edit/edit.html
+++ b/client/views/edit/edit.html
@@ -47,7 +47,7 @@
   </div>
 
   <div class="ui container center aligned">
-    <i class="massive red left arrow link icon"></i>
+    <i class="massive red left arrow link icon" style="zoom: 0.75"></i>
   </div>
 
 </template>
