--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -1,6 +1,6 @@
 <template name="header">
 
-<div class="ui header inverted segment">
+<div class="ui inverted basic segment">
   <div class="ui container">
     <h1 class="ui green header">
       <i class="small white paw icon"></i>
@@ -11,4 +11,3 @@
 </div>
 
 </template>
-
