--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -25,6 +25,11 @@ h2.header {
   cursor: pointer;
 }
 
+.selected {
+  opacity: 0.5;
+  transition: all 0.5s ease;
+}
+
 .ui.inverted.green.statistic > .value {
   color: #5bbd72 !important;
 }
