--- a/client/views/results/results.html
+++ b/client/views/results/results.html
@@ -12,7 +12,7 @@
 
           {{#each list}}
             <p>
-              <div class="ui inverted statistic">
+              <div class="ui small inverted statistic">
                 <div class="text value">
                   {{this}}
                 </div>
@@ -27,9 +27,9 @@
   </div>
 
   <div class="ui container center aligned">
-    <i class="massive red left arrow link icon"></i>
-    <i class="massive blue shuffle link icon"></i>
-    <i class="massive green folder open link icon"></i>
+    <i class="massive red left arrow link icon" style="zoom: 0.75"></i>
+    <i class="massive blue shuffle link icon" style="zoom: 0.75"></i>
+    <i class="massive green folder open link icon" style="zoom: 0.75"></i>
   </div>
 
   <div class="ui basic modal">
@@ -37,4 +37,3 @@
   </div>
 
 </template>
-
