--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -14,12 +14,8 @@
               <div class="ui grid three column">
                 {{#each syllables}}
 
-                  <div class="center aligned column adjust-column">
-                    <div class="ui small inverted statistic">
-                      <div class="text value syllable">
-                        {{string}}
-                      </div>
-                    </div>
+                  <div class="center aligned column">
+                    <span class="syllable">{{string}}</span>
                   </div>
 
                 {{/each}}
