--- a/client/views/results/results.html
+++ b/client/views/results/results.html
@@ -11,13 +11,7 @@
           <div class="ui divider"></div>
 
           {{#each list}}
-            <p>
-              <div class="ui small inverted statistic">
-                <div class="text value">
-                  {{this}}
-                </div>
-              </div>
-            </p>
+            <p class="word">{{this}}</p>
           {{/each}}
 
         </div>
