--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -12,7 +12,7 @@ body, #main {
     padding: 0px;
     overflow-x: hidden;
     color: @primaryFontColor;
-    font-family: 'Lato', serif;
+    font-family: sans-serif;
 }
 
 a {
@@ -31,7 +31,7 @@ a {
 }
 
 .ui.header {
-    font-family: 'Lato', serif;
+    font-family: sans-serif;
 }
 
 .site-wrapper {
