--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -6,38 +6,41 @@ h1.header {
   min-height: 100vh;
 }
 
-h2.header {
-  text-transform: uppercase !important;
-}
-
 .container {
   max-width: 960px;
   margin: auto;
 }
 
-.statistic {
-  margin: 0 !important;
-}
-
 .syllable {
-  padding: 0 1.8em;
-  margin: 0;
   cursor: pointer;
+  font-size: 1.25em;
 }
 
 .selected {
   opacity: 0.5;
+  -webkit-transition: all 0.5s ease; /* Safari and Chrome */
+  -moz-transition: all 0.5s ease; /* Firefox */
+  -o-transition: all 0.5s ease; /* IE 9 */
+  -ms-transition: all 0.5s ease; /* Opera */
   transition: all 0.5s ease;
 }
 
-.ui.inverted.green.statistic > .value {
-  color: #5bbd72 !important;
+.green {
+  color: #5bbd72;
+  -webkit-transition: all 0.5s ease; /* Safari and Chrome */
+  -moz-transition: all 0.5s ease; /* Firefox */
+  -o-transition: all 0.5s ease; /* IE 9 */
+  -ms-transition: all 0.5s ease; /* Opera */
+  transition: all 0.5s ease;
 }
 
-.adjust-column {
-  padding: 0.5em !important;
+.yellow {
+  color: #f2c61f;
 }
 
+.word {
+  font-size: 1.5em;
+}
 
 .modal {
   min-height: 30em !important;
